// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityFeedFilters when the details for all activities are hidden renders filters 1`] = `
<div
  className="sc-gojNiO iIStIR"
>
  <a
    className="sc-cJSrbW sc-daURTG cwrjxw"
    href="#"
    muted={false}
    onClick={[Function]}
  >
    Show
     details for all activities
  </a>
</div>
`;

exports[`ActivityFeedFilters when the details for all activities are shown renders filters 1`] = `
<div
  className="sc-gojNiO iIStIR"
>
  <a
    className="sc-cJSrbW sc-daURTG cwrjxw"
    href="#"
    muted={false}
    onClick={[Function]}
  >
    Hide
     details for all activities
  </a>
</div>
`;
